Add trace probe for chrome cleaner tasks

This CL is adding trace events under the tracing category "safe_browsing"
to determine whether or not chrome cleanup tool is running.

This is useful to determine if the cleanup tool scanning/cleaning is
affecting chrome by looking to the slow-reports. We currently can't
determine whether or not the tool is running.

R=csharp@chromium.org
CC=etienneb@chromium.org

Bug: 874448
Change-Id: I4b54ea470caab6ce63542bedd1169ab667aac008
Reviewed-on: https://chromium-review.googlesource.com/1176137
Reviewed-by: Chris Sharp <csharp@chromium.org>
Commit-Queue: Etienne Bergeron <etienneb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583370}
Former-commit-id: 1f43ac6b091b8c2f0235a2613638c60cc05638bc